# amphetype

./: .gitignore  .pylintrc  Amphetype.py  CHANGELOG.md  Config.py  Data.py  Lesson.py  Makefile  Performance.py  QtUtil.py  Quizzer.py  README.md  StatWidgets.py  TODO.org  Text.py  TextManager.py  about.html  amphetype-mac.spec  bootstrap.py  editdist_fake.py  pynsist.ini  pyproject.toml  readme.txt  requirements.txt  ruff.toml  setup.py  taskfile.yml
.zed/: settings.json
Widgets/: Database.py  Plotters.py
amphetype/: Amphetype.py  Config.py  Data.py  Lesson.py  Performance.py  QtUtil.py  Quizzer.py  StatWidgets.py  Text.py  TextManager.py  __init__.py  fake_imports.py  fwidgets.py  layout.py  main.py  meta.py  settings.py  timingtuple.py  typer.py
amphetype/Widgets/: Database.py  Plotters.py
amphetype/lesson_builder/: __init__.py  common_words.py
data/: about.html  amphetype_mac_icon.icns
